--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
 
 img {
   width: 95%;
+  border-radius: 5%;
+  box-shadow: 5px 5px 10px #888;
 }
 
 p {
@@ -33,12 +35,19 @@ a:visited {
   color: black;
 }
 
+body {
+  font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 /*Header Styling*/
 
 ul {
   list-style: none;
   display: inline-block;
   padding: 0;
+  padding-bottom: 5px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 li {
@@ -56,6 +65,10 @@ li {
 }
 
 .title {
+  margin-bottom: 0;
+}
+
+.title {
   margin: 0 auto;
   padding-bottom: 35px;
   padding-top: 15px;
@@ -66,6 +79,7 @@ li {
 #profile-pic {
   width: 200px;
   height: 200px;
+  margin-top: 15px;
 }
 
 .introduction {
@@ -90,8 +104,10 @@ li {
 }
 
 .skills p {
-  padding: 0;
+  margin-right: 5;
   margin: 0 10px 10px;
+  width: 40%;
+  text-align: center;
 }
 
 #skills {
@@ -105,9 +121,12 @@ li {
 
 .portfolio p {
   margin: 0 auto;
+  padding-top: 0;
+  padding-bottom: 5em;
 }
 #contact {
   text-decoration: underline;
+  display: block;
 }
 .contact p {
   padding: 5px;
