--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ li {
 
 .contact {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(240,248,255,1));
+  margin: 0 auto;
 }
 
 #portfolio {
