--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@ body {
 ul {
   list-style: none;
   display: inline-block;
-  padding: 0;
-  padding-bottom: 5px;
+  padding: 10px;
   margin-top: 0;
 }
 
@@ -58,7 +57,6 @@ li {
 
 .main-header {
   background-image: linear-gradient(to top, rgba(240,248,255,1), rgba(63,189,191,1));
-  height: 250px;
   margin: 0 auto;
   border-bottom: 1px solid lightgrey;
 }
@@ -86,6 +84,7 @@ li {
 .contact {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(240,248,255,1));
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 #portfolio {
@@ -101,9 +100,9 @@ li {
 }
 
 .skills p {
-  width: 100%;
+  width: 90%;
   text-align: center;
-  margin-right: 15em;
+  margin: 0 auto;
 }
 
 #skills {
@@ -123,6 +122,7 @@ li {
 #contact {
   text-decoration: underline;
   display: block;
+  box-sizing: border-box;
 }
 .contact p {
   padding: 5px;
@@ -221,6 +221,7 @@ footer h3 {
 
   .main-header {
       position: relative;
+      height: 250px;
   }
 
   #megan {
@@ -244,9 +245,7 @@ footer h3 {
     background: none;
   }
 
-  #contact {
-    margin: 0 auto;
-  }
+
 }
 
 /*Clear Fix*/
