--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,23 @@ img {
 }
 
 p {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   padding: 1.5em;
 }
 
 h1{
   font-size: 3em;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 h2{
   font-size: 2em;
+  line-height: .5em;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
+h3{
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 a {
@@ -46,6 +54,7 @@ ul {
   display: inline-block;
   padding: 10px;
   margin-top: 0;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 li {
@@ -78,7 +87,7 @@ li {
 
 .introduction {
   background-image: linear-gradient(to bottom, rgba(240,248,255,1), rgba(0,0,0,0));
-  margin-bottom: 5em;
+  font-size: 1.5em;
 }
 
 .contact {
@@ -92,6 +101,8 @@ li {
   margin-bottom: .5em;
   text-decoration: underline;
   line-height: 1em;
+  display: inline-block;
+  width: 100%;
 }
 
 .skills {
@@ -103,10 +114,13 @@ li {
   width: 90%;
   text-align: center;
   margin: 0 auto;
+  font-size: 1.5em;
 }
 
 #skills {
   text-decoration: underline;
+  display: inline-block;
+  width: 100%;
 }
 
 .skills-img {
@@ -121,11 +135,13 @@ li {
 }
 #contact {
   text-decoration: underline;
-  display: block;
-  box-sizing: border-box;
+  display: inline-block;
+  width: 100%;
+
 }
 .contact p {
   padding: 5px;
+  box-sizing: border-box;
 }
 
 #email,
