--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ li {
   height: 250px;
   margin-top: 15px;
   margin-left: 15px;
+  margin-right: 15px;
 }
 
 .introduction {
@@ -270,3 +271,4 @@ footer h3 {
     content: "";
     display: table;
     clear: both;
+}
