--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 body {
   text-align: center;
+  display:inline-block;
+  width: 100%;
 }
 
 img {
@@ -79,8 +81,8 @@ li {
 /*Body Style*/
 
 #profile-pic {
-  width: 300px;
-  height: 250px;
+  width: 200px;
+  height: 150px;
   margin-top: 15px;
   margin-left: 15px;
   margin-right: 15px;
@@ -109,6 +111,7 @@ li {
 .skills {
   width: 100%;
   margin: 0 auto;
+  display: inline-block;
 }
 
 .skills p {
@@ -143,6 +146,7 @@ li {
 .contact p {
   padding: 5px;
   box-sizing: border-box;
+  display: inline-block;
 }
 
 #email,
@@ -238,7 +242,7 @@ footer h3 {
 
   .main-header {
       position: relative;
-      height: 250px;
+      height: 150px;
   }
 
   #megan {
